--- a/GameData/RealismOverhaul/RO_SuggestedMods/SpaceShuttleSystem/Orbiter.cfg
+++ b/GameData/RealismOverhaul/RO_SuggestedMods/SpaceShuttleSystem/Orbiter.cfg
@@ -1,15 +1,15 @@
-@PART[ShuttleOrbiter]:FOR[RealismOverhaul]
+@PART[ShuttleOrbiter|ShuttleOrbiterBasicCabin]:FOR[RealismOverhaul]
 {
 
 	%RSSROConfig = true
 	
 	%rescaleFactor = 1.5625
-	@mass = 47.77
+	@mass = 44.417
 	
-	//@mass = 11.556 + 18.806 + 5.9 + 10.7 + 1.5//decq //48.462
-	//@mass =2.4 +  9.16 + 18.81 + 16.28 + 5.8 + 0.9 - 5.58	//sock 47.77
+	//from the shuttle crew operations manual, section 4.8 CG Limitations
+	//calibrated around station X1090 with all the parts and engines, empty tanks and cargo bay
+	CoMOffset = 0.0, -3.0, 0.0
 	
-	//mass of surfaces and main gear and oms pods = 0.6 + 0.23 + 0.1 + 4.8 + 5.58 = 11.31
 	%fuelCrossFeed = false
 	
 	@maxTemp = 773
@@ -313,7 +313,7 @@
 }
 
 
-@PART[ShuttleOrbiter]:FOR[RealismOverhaul]:NEEDS[TacLifeSupport]
+@PART[ShuttleOrbiter|ShuttleOrbiterBasicCabin]:FOR[RealismOverhaul]:NEEDS[TacLifeSupport]
 {
 	@MODULE[ModuleFuelTanks]
 	{
@@ -454,7 +454,7 @@
 
 
 //Cockpit internal configuration
-@INTERNAL[css_cockpit|css_cockpitOld|css_cockpitEmpty]:FOR[RealismOverhaul]
+@INTERNAL[ShuttleOrbiter|ShuttleOrbiterBasicCabin]:FOR[RealismOverhaul]
 {
 	%scaleAll = 1.5625, 1.5625, 1.5625
 	
@@ -466,3 +466,668 @@
 	}
 }
 
+
+@PART[ShuttleOrbiter|ShuttleOrbiterBasicCabin]
+{
+	!MODULE[ModuleB9PartSwitch]
+	MODULE
+	{
+		name = ModuleB9PartSwitch
+		moduleID = nameSwitch
+		
+		SUBTYPE
+		{
+			name = columbia
+			title = Columbia 1981
+			
+			addedMass = 3.116
+			CoMOffset = 0.0, -3.3, 0.0
+			
+			TEXTURE
+			{
+				texture = SPACE_SHUTTLE_SYSTEM/Cabin/CABINE_COLUMBIA
+				transform = FUSELAGE_001
+				transform = FRCS_MODULE
+			}
+			TEXTURE
+			{
+				texture = SPACE_SHUTTLE_SYSTEM/FUSELASE_COLUMBIA
+				transform = 113
+				transform = RIGHT_PLBD_EXT
+				transform = LEFT_PLBD_EXT
+			}
+			TEXTURE
+			{
+				texture = SPACE_SHUTTLE_SYSTEM/ENGINE_MOUT_OLD_VERSION
+				transform = ULTRA_ENGINE
+			}
+			TEXTURE
+			{
+				texture = SPACE_SHUTTLE_SYSTEM/Wings/WINGSCOLUMBIA1980
+				transform = Wing_RCZ2
+				transform = Wing_RCZ_001
+				transform = LEFT_INBOARD_ELEVON_S
+				transform = LEFT_OUTBOARD_ELEVON_
+			}
+			TEXTURE
+			{
+				texture = SPACE_SHUTTLE_SYSTEM/Wings/EmptyWingsColumbia_NRM
+				isNormalMap = true
+				transform = Wing_RCZ2
+				transform = Wing_RCZ_001
+			}
+			TEXTURE
+			{
+				texture = SPACE_SHUTTLE_SYSTEM/Wings/WINGSCOLUMBIA1980
+				transform = Wing_RCZ
+				transform = Wing_RCZ2_003
+				transform = RIGHT_OUTBOARD_ELEVON
+				transform = RIGHT_INBOARD_ELEVON_
+			}
+			TEXTURE
+			{
+				texture = SPACE_SHUTTLE_SYSTEM/Wings/EmptyWingsColumbia_NRM
+				isNormalMap = true
+				transform = Wing_RCZ
+				transform = Wing_RCZ2_003
+			}
+		}
+		SUBTYPE
+		{
+			name = challenger
+			title = Challenger 1983
+			
+			addedMass = 1.806
+			CoMOffset = 0.0, -3.15, 0.0
+			
+			TEXTURE
+			{
+				texture = SPACE_SHUTTLE_SYSTEM/Cabin/CABINE_CHALLENGER
+				transform = FUSELAGE_001
+				transform = FRCS_MODULE
+			}
+			TEXTURE
+			{
+				texture = SPACE_SHUTTLE_SYSTEM/FUSELASE_CHALLENGER
+				transform = 113
+				transform = RIGHT_PLBD_EXT
+				transform = LEFT_PLBD_EXT
+			}
+			TEXTURE
+			{
+				texture = SPACE_SHUTTLE_SYSTEM/ENGINE_MOUT_OLD_VERSION
+				transform = ULTRA_ENGINE
+			}
+			TEXTURE
+			{
+				texture = SPACE_SHUTTLE_SYSTEM/Wings/WINGSCHALLENGER1980
+				transform = Wing_RCZ2
+				transform = Wing_RCZ_001
+				transform = LEFT_INBOARD_ELEVON_S
+				transform = LEFT_OUTBOARD_ELEVON_
+			}
+			TEXTURE
+			{
+				texture = SPACE_SHUTTLE_SYSTEM/Wings/EmptyWingsChallenger_NRM
+				isNormalMap = true
+				transform = Wing_RCZ2
+				transform = Wing_RCZ_001
+				
+			}
+			TEXTURE
+			{
+				texture = SPACE_SHUTTLE_SYSTEM/Wings/WINGSCHALLENGER1980
+				transform = Wing_RCZ
+				transform = Wing_RCZ2_003
+				transform = RIGHT_OUTBOARD_ELEVON
+				transform = RIGHT_INBOARD_ELEVON_
+			}
+			TEXTURE
+			{
+				texture = SPACE_SHUTTLE_SYSTEM/Wings/EmptyWingsChallenger_NRM
+				isNormalMap = true
+				transform = Wing_RCZ
+				transform = Wing_RCZ2_003
+				
+			}
+		}
+		SUBTYPE
+		{
+			name = discovery
+			title = Discovery 1984
+			
+			TEXTURE
+			{
+				texture = SPACE_SHUTTLE_SYSTEM/Cabin/CABINE_DISCOVERY
+				transform = FUSELAGE_001
+				transform = FRCS_MODULE
+			}
+			TEXTURE
+			{
+				texture = SPACE_SHUTTLE_SYSTEM/FUSELASE2
+				transform = 113
+				transform = RIGHT_PLBD_EXT
+				transform = LEFT_PLBD_EXT
+			}
+			TEXTURE
+			{
+				texture = SPACE_SHUTTLE_SYSTEM/ENGINE_MOUT_OLD_VERSION
+				transform = ULTRA_ENGINE
+			}
+			TEXTURE
+			{
+				texture = SPACE_SHUTTLE_SYSTEM/Wings/WINGSATLANTIS1980
+				transform = Wing_RCZ2
+				transform = Wing_RCZ_001
+				transform = LEFT_INBOARD_ELEVON_S
+				transform = LEFT_OUTBOARD_ELEVON_
+			}
+			TEXTURE
+			{
+				texture = SPACE_SHUTTLE_SYSTEM/Wings/EmptyWingsOld_NRM
+				isNormalMap = true
+				transform = Wing_RCZ2
+				transform = Wing_RCZ_001
+			}
+			TEXTURE
+			{
+				texture = SPACE_SHUTTLE_SYSTEM/Wings/WINGSDISCOVERY1980
+				transform = Wing_RCZ
+				transform = Wing_RCZ2_003
+				transform = RIGHT_OUTBOARD_ELEVON
+				transform = RIGHT_INBOARD_ELEVON_
+			}
+			TEXTURE
+			{
+				texture = SPACE_SHUTTLE_SYSTEM/Wings/EmptyWingsOld_NRM
+				isNormalMap = true
+				transform = Wing_RCZ
+				transform = Wing_RCZ2_003
+			}
+		}
+		SUBTYPE
+		{
+			name = atlantis
+			title = Atlantis 1985
+			
+			TEXTURE
+			{
+				texture = SPACE_SHUTTLE_SYSTEM/Cabin/CABINE
+				transform = FUSELAGE_001
+				transform = FRCS_MODULE
+			}
+			TEXTURE
+			{
+				texture = SPACE_SHUTTLE_SYSTEM/FUSELASE2
+				transform = 113
+				transform = RIGHT_PLBD_EXT
+				transform = LEFT_PLBD_EXT
+			}
+			TEXTURE
+			{
+				texture = SPACE_SHUTTLE_SYSTEM/ENGINE_MOUT_OLD_VERSION
+				transform = ULTRA_ENGINE
+			}
+			TEXTURE
+			{
+				texture = SPACE_SHUTTLE_SYSTEM/Wings/WINGSATLANTIS1980
+				transform = Wing_RCZ2
+				transform = Wing_RCZ_001
+				transform = LEFT_INBOARD_ELEVON_S
+				transform = LEFT_OUTBOARD_ELEVON_
+			}
+			TEXTURE
+			{
+				texture = SPACE_SHUTTLE_SYSTEM/Wings/EmptyWingsOld_NRM
+				isNormalMap = true
+				transform = Wing_RCZ2
+				transform = Wing_RCZ_001
+			}
+			TEXTURE
+			{
+				texture = SPACE_SHUTTLE_SYSTEM/Wings/WINGSATLANTIS1980
+				transform = Wing_RCZ
+				transform = Wing_RCZ2_003
+				transform = RIGHT_OUTBOARD_ELEVON
+				transform = RIGHT_INBOARD_ELEVON_
+			}
+			TEXTURE
+			{
+				texture = SPACE_SHUTTLE_SYSTEM/Wings/EmptyWingsOld_NRM
+				isNormalMap = true
+				transform = Wing_RCZ
+				transform = Wing_RCZ2_003
+			}
+		}
+		SUBTYPE
+		{
+			name = endeavour
+			title = Endeavour 1992
+			
+			addedMass = 0.395
+			
+			TEXTURE
+			{
+				texture = SPACE_SHUTTLE_SYSTEM/Cabin/CABINE_ENDEAVOUR
+				transform = FUSELAGE_001
+				transform = FRCS_MODULE
+			}
+			TEXTURE
+			{
+				texture = SPACE_SHUTTLE_SYSTEM/FUSELASE2
+				transform = 113
+				transform = RIGHT_PLBD_EXT
+				transform = LEFT_PLBD_EXT
+			}
+			TEXTURE
+			{
+				texture = SPACE_SHUTTLE_SYSTEM/ENGINE_MOUT_OLD_VERSION
+				transform = ULTRA_ENGINE
+			}
+			TEXTURE
+			{
+				texture = SPACE_SHUTTLE_SYSTEM/Wings/WINGSATLANTIS1980
+				transform = Wing_RCZ2
+				transform = Wing_RCZ_001
+				transform = LEFT_INBOARD_ELEVON_S
+				transform = LEFT_OUTBOARD_ELEVON_
+			}
+			TEXTURE
+			{
+				texture = SPACE_SHUTTLE_SYSTEM/Wings/EmptyWingsOld_NRM
+				isNormalMap = true
+				transform = Wing_RCZ2
+				transform = Wing_RCZ_001
+			}
+			TEXTURE
+			{
+				texture = SPACE_SHUTTLE_SYSTEM/Wings/WINGSENDEAVOUR1980
+				transform = Wing_RCZ
+				transform = Wing_RCZ2_003
+				transform = RIGHT_OUTBOARD_ELEVON
+				transform = RIGHT_INBOARD_ELEVON_
+			}
+			TEXTURE
+			{
+				texture = SPACE_SHUTTLE_SYSTEM/Wings/EmptyWingsOld_NRM
+				isNormalMap = true
+				transform = Wing_RCZ
+				transform = Wing_RCZ2_003
+			}
+		}
+		SUBTYPE
+		{
+			name = columbiaModern
+			title = Columbia Modern
+			
+			addedMass = 3.116
+			CoMOffset = 0.0, -3.3, 0.0
+			
+			TEXTURE
+			{
+				texture = SPACE_SHUTTLE_SYSTEM/Cabin/CABINE_COLUMBIA_SECOND_VERSION
+				transform = FUSELAGE_001
+				transform = FRCS_MODULE
+			}
+			TEXTURE
+			{
+				texture = SPACE_SHUTTLE_SYSTEM/FUSELASE2
+				transform = 113
+				transform = RIGHT_PLBD_EXT
+				transform = LEFT_PLBD_EXT
+			}
+			TEXTURE
+			{
+				texture = SPACE_SHUTTLE_SYSTEM/ENGINE_MOUT
+				transform = ULTRA_ENGINE
+			}
+			TEXTURE
+			{
+				texture = SPACE_SHUTTLE_SYSTEM/Wings/WINGSCOLUMBIAMODERN
+				transform = Wing_RCZ2
+				transform = Wing_RCZ_001
+				transform = LEFT_INBOARD_ELEVON_S
+				transform = LEFT_OUTBOARD_ELEVON_
+			}
+			TEXTURE
+			{
+				texture = SPACE_SHUTTLE_SYSTEM/Wings/EmptyWingsColumbia_NRM
+				isNormalMap = true
+				transform = Wing_RCZ2
+				transform = Wing_RCZ_001
+			}
+			TEXTURE
+			{
+				texture = SPACE_SHUTTLE_SYSTEM/Wings/WINGSCOLUMBIAMODERN
+				transform = Wing_RCZ
+				transform = Wing_RCZ2_003
+				transform = RIGHT_OUTBOARD_ELEVON
+				transform = RIGHT_INBOARD_ELEVON_
+			}
+			TEXTURE
+			{
+				texture = SPACE_SHUTTLE_SYSTEM/Wings/EmptyWingsColumbia_NRM
+				isNormalMap = true
+				transform = Wing_RCZ
+				transform = Wing_RCZ2_003
+			}
+		}
+		SUBTYPE
+		{
+			name = discoveryModern
+			title = Discovery Modern
+			
+			TEXTURE
+			{
+				texture = SPACE_SHUTTLE_SYSTEM/Cabin/CABINE_DISCOVERY
+				transform = FUSELAGE_001
+				transform = FRCS_MODULE
+			}
+			TEXTURE
+			{
+				texture = SPACE_SHUTTLE_SYSTEM/FUSELASE2
+				transform = 113
+				transform = RIGHT_PLBD_EXT
+				transform = LEFT_PLBD_EXT
+			}
+			TEXTURE
+			{
+				texture = SPACE_SHUTTLE_SYSTEM/ENGINE_MOUT
+				transform = ULTRA_ENGINE
+			}
+			TEXTURE
+			{
+				texture = SPACE_SHUTTLE_SYSTEM/Wings/WINGSATLANTISMODERN
+				transform = Wing_RCZ2
+				transform = Wing_RCZ_001
+				transform = LEFT_INBOARD_ELEVON_S
+				transform = LEFT_OUTBOARD_ELEVON_
+			}
+			TEXTURE
+			{
+				texture = SPACE_SHUTTLE_SYSTEM/Wings/EmptyWingsNew_NRM
+				isNormalMap = true
+				transform = Wing_RCZ2
+				transform = Wing_RCZ_001
+			}
+			TEXTURE
+			{
+				texture = SPACE_SHUTTLE_SYSTEM/Wings/WINGSDISCOVERYMODERN
+				transform = Wing_RCZ
+				transform = Wing_RCZ2_003
+				transform = RIGHT_OUTBOARD_ELEVON
+				transform = RIGHT_INBOARD_ELEVON_
+			}
+			TEXTURE
+			{
+				texture = SPACE_SHUTTLE_SYSTEM/Wings/EmptyWingsNew_NRM
+				isNormalMap = true
+				transform = Wing_RCZ
+				transform = Wing_RCZ2_003
+			}
+		}
+		SUBTYPE
+		{
+			name = atlantisModern
+			title = Atlantis Modern
+			
+			TEXTURE
+			{
+				texture = SPACE_SHUTTLE_SYSTEM/Cabin/CABINE
+				transform = FUSELAGE_001
+				transform = FRCS_MODULE
+			}
+			TEXTURE
+			{
+				texture = SPACE_SHUTTLE_SYSTEM/FUSELASE2
+				transform = 113
+				transform = RIGHT_PLBD_EXT
+				transform = LEFT_PLBD_EXT
+			}
+			TEXTURE
+			{
+				texture = SPACE_SHUTTLE_SYSTEM/ENGINE_MOUT
+				transform = ULTRA_ENGINE
+			}
+			TEXTURE
+			{
+				texture = SPACE_SHUTTLE_SYSTEM/Wings/WINGSATLANTISMODERN
+				transform = Wing_RCZ2
+				transform = Wing_RCZ_001
+				transform = LEFT_INBOARD_ELEVON_S
+				transform = LEFT_OUTBOARD_ELEVON_
+			}
+			TEXTURE
+			{
+				texture = SPACE_SHUTTLE_SYSTEM/Wings/EmptyWingsNew_NRM
+				isNormalMap = true
+				transform = Wing_RCZ2
+				transform = Wing_RCZ_001
+			}
+			TEXTURE
+			{
+				texture = SPACE_SHUTTLE_SYSTEM/Wings/WINGSATLANTISMODERN
+				transform = Wing_RCZ
+				transform = Wing_RCZ2_003
+				transform = RIGHT_OUTBOARD_ELEVON
+				transform = RIGHT_INBOARD_ELEVON_
+			}
+			TEXTURE
+			{
+				texture = SPACE_SHUTTLE_SYSTEM/Wings/EmptyWingsNew_NRM
+				isNormalMap = true
+				transform = Wing_RCZ
+				transform = Wing_RCZ2_003
+			}
+		}
+		SUBTYPE
+		{
+			name = endeavourModern
+			title = Endeavour Modern
+			
+			addedMass = 0.395
+			
+			TEXTURE
+			{
+				texture = SPACE_SHUTTLE_SYSTEM/Cabin/CABINE_ENDEAVOUR
+				transform = FUSELAGE_001
+				transform = FRCS_MODULE
+			}
+			TEXTURE
+			{
+				texture = SPACE_SHUTTLE_SYSTEM/FUSELASE2
+				transform = 113
+				transform = RIGHT_PLBD_EXT
+				transform = LEFT_PLBD_EXT
+			}
+			TEXTURE
+			{
+				texture = SPACE_SHUTTLE_SYSTEM/ENGINE_MOUT
+				transform = ULTRA_ENGINE
+			}
+			TEXTURE
+			{
+				texture = SPACE_SHUTTLE_SYSTEM/Wings/WINGSATLANTISMODERN
+				transform = Wing_RCZ2
+				transform = Wing_RCZ_001
+				transform = LEFT_INBOARD_ELEVON_S
+				transform = LEFT_OUTBOARD_ELEVON_
+			}
+			TEXTURE
+			{
+				texture = SPACE_SHUTTLE_SYSTEM/Wings/EmptyWingsNew_NRM
+				isNormalMap = true
+				transform = Wing_RCZ2
+				transform = Wing_RCZ_001
+			}
+			TEXTURE
+			{
+				texture = SPACE_SHUTTLE_SYSTEM/Wings/WINGSENDEAVOURMODERN
+				transform = Wing_RCZ
+				transform = Wing_RCZ2_003
+				transform = RIGHT_OUTBOARD_ELEVON
+				transform = RIGHT_INBOARD_ELEVON_
+			}
+			TEXTURE
+			{
+				texture = SPACE_SHUTTLE_SYSTEM/Wings/EmptyWingsNew_NRM
+				isNormalMap = true
+				transform = Wing_RCZ
+				transform = Wing_RCZ2_003
+			}
+		}
+		
+		SUBTYPE
+		{
+			name = enterprise
+			title = Enterprise
+			
+			transform = NoseGuage
+			
+			TEXTURE
+			{
+				texture = SPACE_SHUTTLE_SYSTEM/Cabin/CABINE_ENTERPRISE
+				transform = FUSELAGE_001
+				transform = FRCS_MODULE
+			}
+			TEXTURE
+			{
+				texture = SPACE_SHUTTLE_SYSTEM/FUSELASE_ENTERPRISE
+				transform = 113
+				transform = RIGHT_PLBD_EXT
+				transform = LEFT_PLBD_EXT
+			}
+			TEXTURE
+			{
+				texture = SPACE_SHUTTLE_SYSTEM/ENGINE_MOUT_OLD_VERSION
+				transform = ULTRA_ENGINE
+			}
+			TEXTURE
+			{
+				texture = SPACE_SHUTTLE_SYSTEM/Wings/WINGSENTERPRISE
+				transform = Wing_RCZ2
+				transform = Wing_RCZ_001
+				transform = LEFT_INBOARD_ELEVON_S
+				transform = LEFT_OUTBOARD_ELEVON_
+			}
+			TEXTURE
+			{
+				texture = SPACE_SHUTTLE_SYSTEM/Wings/EmptyWingsChallenger_NRM
+				isNormalMap = true
+				transform = Wing_RCZ2
+				transform = Wing_RCZ_001
+			}
+			TEXTURE
+			{
+				texture = SPACE_SHUTTLE_SYSTEM/Wings/WINGSENTERPRISE
+				transform = Wing_RCZ
+				transform = Wing_RCZ2_003
+				transform = RIGHT_OUTBOARD_ELEVON
+				transform = RIGHT_INBOARD_ELEVON_
+			}
+			TEXTURE
+			{
+				texture = SPACE_SHUTTLE_SYSTEM/Wings/EmptyWingsChallenger_NRM
+				isNormalMap = true
+				transform = Wing_RCZ
+				transform = Wing_RCZ2_003
+			}
+			TEXTURE
+			{
+				texture = SPACE_SHUTTLE_SYSTEM/FUSELASE_ENTERPRISE
+				transform = 113
+				transform = RIGHT_PLBD_EXT
+				transform = LEFT_PLBD_EXT
+			}
+		}
+		SUBTYPE
+		{
+			name = empty
+			title = Blank B
+			
+			TEXTURE
+			{
+				texture = SPACE_SHUTTLE_SYSTEM/Cabin/CABINE_EMPTY
+				transform = FUSELAGE_001
+				transform = FRCS_MODULE
+			}
+			TEXTURE
+			{
+				texture = SPACE_SHUTTLE_SYSTEM/Wings/WINGSENTERPRISE
+				transform = Wing_RCZ2
+				transform = Wing_RCZ_001
+				transform = LEFT_INBOARD_ELEVON_S
+				transform = LEFT_OUTBOARD_ELEVON_
+			}
+			TEXTURE
+			{
+				texture = SPACE_SHUTTLE_SYSTEM/Wings/EmptyWingsChallenger_NRM
+				isNormalMap = true
+				transform = Wing_RCZ2
+				transform = Wing_RCZ_001
+			}
+			TEXTURE
+			{
+				texture = SPACE_SHUTTLE_SYSTEM/Wings/EmptyWingsNew
+				transform = Wing_RCZ
+				transform = Wing_RCZ2_003
+				transform = RIGHT_OUTBOARD_ELEVON
+				transform = RIGHT_INBOARD_ELEVON_
+			}
+			TEXTURE
+			{
+				texture = SPACE_SHUTTLE_SYSTEM/Wings/EmptyWingsNew_NRM
+				isNormalMap = true
+				transform = Wing_RCZ
+				transform = Wing_RCZ2_003
+			}
+		}
+		SUBTYPE
+		{
+			name = empty2
+			title = Blank A
+			
+			TEXTURE
+			{
+				texture = SPACE_SHUTTLE_SYSTEM/Cabin/CABINE_EMPTY
+				transform = FUSELAGE_001
+				transform = FRCS_MODULE
+			}
+			TEXTURE
+			{
+				texture = SPACE_SHUTTLE_SYSTEM/ENGINE_MOUT_OLD_VERSION
+				transform = ULTRA_ENGINE
+			}
+			TEXTURE
+			{
+				texture = SPACE_SHUTTLE_SYSTEM/Wings/EmptyWingsOld
+				transform = Wing_RCZ2
+				transform = Wing_RCZ_001
+				transform = LEFT_INBOARD_ELEVON_S
+				transform = LEFT_OUTBOARD_ELEVON_
+			}
+			TEXTURE
+			{
+				texture = SPACE_SHUTTLE_SYSTEM/Wings/EmptyWingsOld_NRM
+				isNormalMap = true
+				transform = Wing_RCZ2
+				transform = Wing_RCZ_001
+			}
+			TEXTURE
+			{
+				texture = SPACE_SHUTTLE_SYSTEM/Wings/EmptyWingsOld
+				transform = Wing_RCZ
+				transform = Wing_RCZ2_003
+				transform = RIGHT_OUTBOARD_ELEVON
+				transform = RIGHT_INBOARD_ELEVON_
+			}
+			TEXTURE
+			{
+				texture = SPACE_SHUTTLE_SYSTEM/Wings/EmptyWingsOld_NRM
+				isNormalMap = true
+				transform = Wing_RCZ
+				transform = Wing_RCZ2_003
+			}
+		}
+	}
+}
